--- a/src/main/resources/templates/jogador/cadastroJogador.html
+++ b/src/main/resources/templates/jogador/cadastroJogador.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <title>Cadastro de Jogador</title>
     <meta charset="utf-8">
@@ -12,14 +12,17 @@
 
 <div class="container">
     <h2>Cadastro</h2>
-    <form action="/cadastrar" method="post">
+    <div class="alert alert-info alert-dismissable"  role="alert" th:if="${not #strings.isEmpty(message)}">
+        <span th:text="${message}"></span>
+    </div>
+    <form action="/cadastrar" method="post" >
         <div class="form-group">
             <label for="nome">Nome:</label>
-            <input type="nome" class="form-control" id="nome" placeholder="Entre o nome" name="nome">
+            <input type="nome" class="form-control" id="nome" placeholder="Entre o nome" name="nome" required>
         </div>
         <div class="form-group">
             <label for="email">Email:</label>
-            <input type="email" class="form-control" id="email" placeholder="Entre o email" name="email">
+            <input type="email" class="form-control" id="email" placeholder="Entre o email" name="email" required>
         </div>
         <div class="form-group">
             <label for="telefone">Telefone:</label>
@@ -34,8 +37,8 @@
         <div class="radio">
             <label><input type="radio" name="grupo" value="ligaDaJustica">A Liga da Justiça</label>
         </div>
-        <button type="submit" class="btn btn-default">Salvar</button>
-        <button type="submit" class="btn btn-default">Listar Jogadores</button>
+        <button id="submit-button" type="submit" class="btn btn-default">Salvar</button>
+        <a href="jogador/listaJogadores" class="btn btn-default" role="button">Listar Jogadores</a>
     </form>
 </div>
 
