--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,8 +9,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+<div class="container">
 
-<h2>Olá mundo</h2>
-
+    <h2>Test Back-end UOL Host</h2>
+    <p> Raíssa Cristina Souza de Andrade</p>
+    <a href="/cadastrar" class="btn btn-default" role="button">Cadastrar Jogador</a>
+    <a href="jogador/listaJogadores" class="btn btn-default" role="button">Listar Jogadores</a>
+</div>
 </body>
 </html>
