--- a/src/main/resources/templates/jogador/cadastroJogador.html
+++ b/src/main/resources/templates/jogador/cadastroJogador.html
@@ -29,7 +29,7 @@
             <input type="text" class="form-control" id="telefone" placeholder="Entre o telefone" name="telefone">
         </div>
         <div>
-            <h3>Quero ser:</h3>
+            <h3>Quero ser do grupo:</h3>
         </div>
         <div class="radio">
             <label><input type="radio" name="grupo" value="vingadores" checked>Os Vingadores</label>
